# torch-xpu-ops

.github/actions/inductor-xpu-e2e-test/: action.yml
.github/scripts/: apply_torch_pr.py
.github/workflows/: build.yml  inductor_xpu_e2e_ci.yml  inductor_xpu_e2e_nightly.yml  nightly_ondemand.yml  pull.yml
src/aten/: CMakeLists.txt  EmptyTensor.cpp  EmptyTensor.h
